[gd_scene load_steps=41 format=3 uid="uid://bvhjf2v1i3i05"]

[ext_resource type="Script" uid="uid://0jo4n3l1wn3k" path="res://scripts/player.gd" id="1_hjaqi"]
[ext_resource type="Texture2D" uid="uid://de0j27rye3wmj" path="res://art/Tiny Swords/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="1_xo3ru"]
[ext_resource type="PackedScene" uid="uid://c34jn6bax50d3" path="res://components/health_component.tscn" id="3_fvtld"]
[ext_resource type="Texture2D" uid="uid://c72t3u4heih1f" path="res://art/Tiny Swords/Tiny Swords (Update 010)/Resources/Sheep/HappySheep_All.png" id="4_ct4mp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hjaqi"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvtld"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct4mp"]
atlas = ExtResource("1_xo3ru")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4jxa"]
atlas = ExtResource("1_xo3ru")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh5ij"]
atlas = ExtResource("1_xo3ru")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp4bs"]
atlas = ExtResource("1_xo3ru")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2vtq"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fvbb"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml7e8"]
atlas = ExtResource("1_xo3ru")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihjo1"]
atlas = ExtResource("1_xo3ru")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1vr"]
atlas = ExtResource("1_xo3ru")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_34jf3"]
atlas = ExtResource("1_xo3ru")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7b46"]
atlas = ExtResource("1_xo3ru")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4wxg"]
atlas = ExtResource("1_xo3ru")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bup7g"]
atlas = ExtResource("1_xo3ru")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ja17"]
atlas = ExtResource("1_xo3ru")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4iqv"]
atlas = ExtResource("1_xo3ru")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_42h83"]
atlas = ExtResource("1_xo3ru")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_iuf2t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjaqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvtld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct4mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4jxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh5ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp4bs")
}],
"loop": false,
"name": &"attack",
"speed": 40.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2vtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fvbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml7e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihjo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34jf3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7b46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4wxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bup7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ja17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4iqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42h83")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jrjdb"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjaqi"]
size = Vector2(49, 90.125)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuf2t"]
atlas = ExtResource("4_ct4mp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrjdb"]
atlas = ExtResource("4_ct4mp")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk4ol"]
atlas = ExtResource("4_ct4mp")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4reak"]
atlas = ExtResource("4_ct4mp")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt23p"]
atlas = ExtResource("4_ct4mp")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8m7u"]
atlas = ExtResource("4_ct4mp")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qucqc"]
atlas = ExtResource("4_ct4mp")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsw3c"]
atlas = ExtResource("4_ct4mp")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1uwf"]
atlas = ExtResource("4_ct4mp")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ie14"]
atlas = ExtResource("4_ct4mp")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8el"]
atlas = ExtResource("4_ct4mp")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vgh4"]
atlas = ExtResource("4_ct4mp")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3knh"]
atlas = ExtResource("4_ct4mp")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3008"]
atlas = ExtResource("4_ct4mp")
region = Rect2(640, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpsxb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuf2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrjdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk4ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4reak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt23p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8m7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qucqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsw3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1uwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ie14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vgh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3knh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3008")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_hjaqi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iuf2t")
animation = &"attack"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
shape = SubResource("CircleShape2D_jrjdb")

[node name="AreaAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2(56, -13)
shape = SubResource("RectangleShape2D_hjaqi")
debug_color = Color(0.857226, 0.365371, 0, 0.42)

[node name="Components" type="Node2D" parent="."]
position = Vector2(0, -19)

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("progress_bar") instance=ExtResource("3_fvtld")]
progress_bar = NodePath("../../ProgressBar")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.164706, 1, 0.2, 1)
offset_left = -53.0
offset_top = -82.0
offset_right = 53.0
offset_bottom = -60.0
value = 100.0
show_percentage = false

[node name="AnimatedSheep" type="AnimatedSprite2D" parent="."]
position = Vector2(-113, -5)
scale = Vector2(2.03906, 1.85938)
sprite_frames = SubResource("SpriteFrames_wpsxb")
autoplay = "default"
frame_progress = 0.725701

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AreaAttack" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_area_2d_body_exited"]
